--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,7 +6,7 @@
   
   body {
     font-family: sans-serif;
-    text-transform: capitalize; /* Primer letra mauscul*/
+    /*text-transform: capitalize;  Primer letra mauscul*/
   }
 
   header {
@@ -45,7 +45,7 @@
   }
   
   h1 {
-    font-size: 60px;
+    font-size: 30px;
     margin: 0;
     color: #d80909;
   }
