--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-  <h1>Indumentarias Vanesa-Sistema de control</h1>
+  <h1>Sistema control de Ventas</h1>
     <header>
         
         <nav>
