Modificación pagina clientes

--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+  <title> Indumentarias Vanesa</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"  href="{{ url_for('static', filename='css/styles.css' ) }}">
+    
 </head>
 <body>
-    <h1>Clientes</h1>
+  <h1>Sistema control de Ventas Vanesa</h1>
+    <header>
+        
+        <nav>
+          <ul>
+            <li><a href="#">Clientes</a></li>
+            <li><a href="#">Vendedores</a></li>
+            <li><a href="#">Productos</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+        <div class="main-menu">
+          
+          <ul class="menu-main">
+            <li><a href="#">Agregar clientes</a></li>
+            <li><a href="#">Modificar Cliente</a></li>
+            <li><a href="#">Buscar clientes</a></li>
+          </ul>
+        </div>
+        
+        <div class="main-container">
+          <h2>Pagina Clientes</h2>
+          La etiqueta aside contiene información accesoria, que no suele añadir un valor significativo a la temática de la página. Puede ser usada para la barra lateral en las que puede ir elementos de widgets, con cualquier contenido dentro.
+        </div>
+          
+        
+
+
+      </main>
+
+   
+              
+      <footer class="footer">
+          <div class="footer-acerca">
+            <h4>Compañia</h4>
+              <a name="indice1"> Hola</a>              
+
+          </div>
+
+          <div class="footer-social">
+
+            
+          </div>
+      
+      </footer>
     
 </body>
 </html>
